--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font: 400 14px Roboto, sans-serif;
+  font: 400 62.5% Roboto, sans-serif;
   background: #f0f0f5;
   -webkit-font-smoothing: antialiased;
 }
@@ -16,7 +16,7 @@ body {
 input,
 button,
 textarea {
-  font: 400 18px Roboto, sans-serif;
+  font: 400 1.8rem Roboto, sans-serif;
 }
 
 button {
@@ -45,7 +45,7 @@ form textarea {
 
 .button {
   width: 100%;
-  height: 60px;
+  height: auto;
   background: #e02041;
   border: 0;
   border-radius: 8px;
@@ -81,4 +81,33 @@ form textarea {
 
 .back-link:hover {
   opacity: 0.8;
+}
+
+@media (max-width: 500px) {
+  .button {
+    width: 100%;
+    height: auto;
+    background: #e02041;
+    border: 0;
+    border-radius: 8px;
+    color: #fff;
+    font-weight: bold;
+    margin-top: 16px;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 35px;
+    transition: filter 2s;
+  }
+
+  form input {
+    width: 100%;
+    height: 30px;
+    color: #333;
+    border: 1px solid #dcdce6;
+    border-radius: 8px;
+    padding: 0 24px;
+    font-size: 14px;
+  }
 }
