--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -1,8 +1,18 @@
+html {
+  font-size: 62.5%;
+}
+
+.image-heroes {
+  width: 50%;
+}
+
 .logon-container {
   width: 100%;
   max-width: 1120px;
   height: 100vh;
   margin: 0 auto;
+  padding: 20px;
+  font-size: 62.5%;
 
   display: flex;
   align-items: center;
@@ -29,7 +39,7 @@
   align-items: center;
   margin-top: 40px;
   color: #41414d;
-  font-size: 18px;
+  font-size: 14px;
   text-decoration: none;
   font-weight: 500;
   transition: opacity 0.2s;
@@ -41,4 +51,41 @@
 
 .logon-container section.form form a:hover {
   opacity: 0.8;
+}
+
+@media (max-width: 500px) {
+  .logon-container {
+    width: 100%;
+    max-width: 1120px;
+    height: 100vh;
+    margin: 0 20px;
+    padding: 20px;
+    font-size: 62.5%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image-heroes {
+    order: -1;
+    width: 80%;
+    margin-top: 5%;
+  }
+
+  .logon-container section.form form {
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .image-logo {
+    margin: 0 10%;
+    width: 75%;
+  }
+
+  .logon-container section.form form h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
 }
